fixed footer spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,15 +82,15 @@ li {
 
 #content {
   width: 960px;
-  margin: 2% 0 6.2% 13%;
+  margin: 2% 0 0 13%;
 }
 
 .main_content {
   background-color: #ffffff;
   border: 1px solid #dddddd;
-  /*margin: 2% 0 6.2% 13%;*/
   float: left;
   padding: 0 20px 10px 20px;
+  margin-bottom: 12%;
   width: 610px;
 }
 
@@ -181,7 +181,7 @@ input, #message_field {
   flex-direction: column;
   float: right;
   width: 270px;
-  /*margin: 2% 19% 0% 0%;*/
+  margin-bottom: 12%;
 }
 
 .contacts_title {
